# research-lab

./: .gitignore  CHANGELOG.md  LICENSE.txt  README.md  parser.py  pipeline.py  requirements.txt  test_parser.py  train.py
_legacy/: ext_dashboard.py  ext_parser.py  parser.py  test_parser.py  test_zobrist.js  train.py
chess_engine/: BUILDING.md  Cargo.toml  index.html
chess_engine/cli-demo/: Cargo.toml
chess_engine/cli-demo/src/: main.rs
chess_engine/engine-core/: Cargo.toml
chess_engine/engine-core/src/: lib.rs
