[package]
name = "cli-demo"
version = "0.1.0"
edition = "2021"
description = "A CLI demo for the fen_parser_engine library."

[dependencies]
# Here, we tell Cargo to find the 'engine-core' package
# in a local path within the same workspace.
# This path is relative to *this file*, so `../engine-core` is still correct.
engine-core = { path = "../engine-core" }