[package]
name = "engine-core"
version = "0.1.0"
edition = "2021"
description = "A FEN validator, parser, and Zobrist hasher for a Rust chess engine."

[lib]
# We continue to compile to WASM (cdylib)
# Added "rlib" so other Rust crates can use it
crate-type = ["cdylib", "rlib"]

[dependencies]
# wasm-bindgen is the bridge between Rust and JavaScript.
wasm-bindgen = { version = "0.2.92", features = ["serde-serialize"] }

# serde is for serializing/deserializing data structures (to pass them to JS as JSON).
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"

# rand is used to generate the Zobrist keys.
rand = "0.8.5"

# once_cell is used to initialize the Zobrist keys exactly once.
once_cell = "1.19.0"

# This provides better error messages in the browser console.
console_error_panic_hook = { version = "0.1.7", optional = true }

# We don't need [profile.release] here, as it's defined in the root Cargo.toml.